--- a/src/app/pages/panel-entrenador/panel-entrenador.page.html
+++ b/src/app/pages/panel-entrenador/panel-entrenador.page.html
@@ -25,7 +25,7 @@
     Cerrar sesión
   </ion-button>
 
-  <h3 style="margin-top: 20px;">Clientes asociados:</h3>
+  <h3 style="margin-top: 20px;">Mis asociados:</h3>
 
   <ion-accordion-group *ngIf="clientes.length > 0">
     <ion-accordion *ngFor="let cliente of clientes">
