--- a/src/app/pages/registro-dueno/registro-dueno.page.html
+++ b/src/app/pages/registro-dueno/registro-dueno.page.html
@@ -1,33 +1,52 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Registro de Dueño</ion-title>
+<ion-header translucent="true">
+  <ion-toolbar color="dark">
+    <ion-title class="titulo-header">Registro de Dueño</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <form (ngSubmit)="registrarDueno()">
+<ion-content class="pagina-registro" fullscreen>
+  <div class="container">
 
-    <ion-item>
-      <ion-label position="floating">Nombre completo</ion-label>
-      <ion-input [(ngModel)]="nombre" name="nombre" required></ion-input>
-    </ion-item>
+    <div class="mensaje-inicial">
+      <h2><span class="marca">Mi Coach Personal</span></h2>
+      <p>Regístrate como dueño para administrar tu Box y gestionar entrenadores y clientes.</p>
+    </div>
 
-    <ion-item>
-      <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input [(ngModel)]="correo" name="correo" type="email" required></ion-input>
-    </ion-item>
+    <ion-card class="form-card">
+      <ion-card-content>
+        <form (ngSubmit)="registrarDueno()">
 
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input [(ngModel)]="password" name="password" type="password" required></ion-input>
-    </ion-item>
+          <ion-item class="item-dark">
+            <ion-label position="floating">Nombre completo</ion-label>
+            <ion-input [(ngModel)]="nombre" name="nombre" required></ion-input>
+          </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Nombre del Box</ion-label>
-      <ion-input [(ngModel)]="nombreBox" name="nombreBox" required></ion-input>
-    </ion-item>
+          <ion-item class="item-dark">
+            <ion-label position="floating">Correo electrónico</ion-label>
+            <ion-input [(ngModel)]="correo" name="correo" type="email" required></ion-input>
+          </ion-item>
 
-    <ion-button expand="full" type="submit">Registrarme</ion-button>
-    
-  </form>
+          <ion-item class="item-dark">
+            <ion-label position="floating">Contraseña</ion-label>
+            <ion-input [(ngModel)]="password" name="password" type="password" required></ion-input>
+          </ion-item>
+
+          <ion-item class="item-dark">
+            <ion-label position="floating">Nombre del Box</ion-label>
+            <ion-input [(ngModel)]="nombreBox" name="nombreBox" required></ion-input>
+          </ion-item>
+
+          <ion-button expand="block" type="submit" class="boton-verde">
+            <ion-icon name="checkmark-done-outline" slot="start"></ion-icon>
+            Crear cuenta
+          </ion-button>
+        </form>
+      </ion-card-content>
+    </ion-card>
+
+    <div class="footer-text">
+      <p>Versión 1.0.0 | #StrongTogether</p>
+    </div>
+
+  </div>
 </ion-content>
