--- a/src/app/pages/mis-rutinas/mis-rutinas.page.html
+++ b/src/app/pages/mis-rutinas/mis-rutinas.page.html
@@ -1,25 +1,24 @@
 <ion-content class="ion-padding">
 
-  <h2>Mis Rutinas Semanales</h2>
+  <h2 class="titulo-seccion">Mis Rutinas Semanales</h2>
 
   <ion-list *ngIf="rutinas.length > 0; else noRutinas">
-    <ion-card *ngFor="let rutina of rutinas">
+    <ion-card class="card-rojo" *ngFor="let rutina of rutinas">
       <ion-card-header>
-        <ion-card-title>{{ rutina.nombre_rutina }}</ion-card-title>
+        <ion-card-title class="titulo-rojo">{{ rutina.nombre_rutina }}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        Día asignado: <strong>{{ rutina.dia_entrenamiento || 'No asignado' }}</strong>
+        <p>Día asignado: <strong>{{ rutina.dia_entrenamiento || 'No asignado' }}</strong></p>
       </ion-card-content>
-      <ion-button expand="full" color="success" (click)="verDetalleRutina(rutina.id_rutina)">
+      <ion-button expand="full" class="boton-rojo" (click)="verDetalleRutina(rutina.id_rutina)">
+        <ion-icon name="barbell-outline" slot="start"></ion-icon>
         Ver Rutina Detallada
       </ion-button>
-      
-      
     </ion-card>
   </ion-list>
 
   <ng-template #noRutinas>
-    <p>No tienes rutinas asignadas aún.</p>
+    <p class="texto-vacio">No tienes rutinas asignadas aún.</p>
   </ng-template>
 
 </ion-content>
