--- a/src/app/pages/crear-cliente/crear-cliente.page.html
+++ b/src/app/pages/crear-cliente/crear-cliente.page.html
@@ -1,35 +1,47 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="success">
     <ion-title>Crear Cliente</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card>
+
+  <ion-card class="card-rojo">
     <ion-card-header>
-      <ion-card-title>Registrar nuevo cliente</ion-card-title>
+      <ion-card-title class="titulo-rojo">
+        <ion-icon name="person-add-outline" slot="start"></ion-icon>
+        Registrar nuevo cliente
+      </ion-card-title>
     </ion-card-header>
+
     <ion-card-content>
       <form (ngSubmit)="registrarCliente()">
+
         <ion-item>
+          <ion-icon name="person-outline" slot="start"></ion-icon>
           <ion-label position="floating">Nombre</ion-label>
           <ion-input [(ngModel)]="nombre" name="nombre" required></ion-input>
         </ion-item>
 
         <ion-item>
+          <ion-icon name="mail-outline" slot="start"></ion-icon>
           <ion-label position="floating">Correo</ion-label>
           <ion-input [(ngModel)]="correo" name="correo" type="email" required></ion-input>
         </ion-item>
 
         <ion-item>
+          <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
           <ion-label position="floating">Contraseña</ion-label>
           <ion-input [(ngModel)]="password" name="password" type="password" required></ion-input>
         </ion-item>
 
-        <ion-button expand="full" type="submit" class="ion-margin-top" color="success">
+        <ion-button expand="full" type="submit" class="boton-rojo ion-margin-top">
+          <ion-icon name="person-add" slot="start"></ion-icon>
           Registrar Cliente
         </ion-button>
+
       </form>
     </ion-card-content>
   </ion-card>
+
 </ion-content>
